# LearnCMake

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: LTO.cmake  docs.cmake  git_submodule.cmake  warnings.cmake
configs/: CMakeLists.txt  configs.hpp.in
docs/: Doxyfile
include/: lib.hpp
src/: CMakeLists.txt  main.cpp
src/sample_lib/: CMakeLists.txt  lib.cpp
xlibs/: CMakeLists.txt
